Add Function: 添加战斗关卡、战斗游戏模式、c++类的角色，实现移动、转向功能

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,4 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+GlobalDefaultGameMode=/Script/MyWuxia.MyWuxiaGameModeBase
 
