--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ DerivedDataCache/
 *.suo
 *.xcodeproj
 *.xcworkspace
+.vs/
 
 # 不需要跟踪的文件
 *.log
@@ -20,3 +21,6 @@ Build/
 Plugins/*/Binaries/
 Plugins/*/Intermediate/
 
+# 资源文件
+Content/Man
+Content/Mesh
